# dev-peace

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
docs/: index.html
scripts/: install-global.sh  install-service-macos.sh  install-service.sh  service-example.sh
src/dev_peace/: __init__.py
src/dev_peace/cli/: __init__.py  interactive.py  main.py
src/dev_peace/config/: __init__.py  settings.py
src/dev_peace/core/: __init__.py  activity_monitor.py  status_manager.py
src/dev_peace/database/: __init__.py  models.py
src/dev_peace/git_monitor/: __init__.py  branch_parser.py  detector.py
src/dev_peace/jira_integration/: __init__.py  client.py
